# TheLastFight

./: .gitignore  CMakeLists.txt  Custom_structures.h  Fight.c  Fight.h  Monster.c  README.md  char_creation.c  char_creation.h  main.c  monster.h  special_events.c  special_events.h  start_end.c  start_end.h
ASCII/: ASCII_dungeon.txt  ASCII_gameover.txt  ASCII_goblin.txt  ASCII_gryphon.txt  ASCII_minotaur.txt  ASCII_minotaur2.txt  ASCII_ring.txt  ASCII_shield.txt  ASCII_skeleton.txt  ASCII_sword.txt  ASCII_witch.txt  armor_normal_special.txt  attack_normal_special.txt  attack_rare_special.txt  goblin_choose_race.txt  heal_normal_special.txt  heal_rare_special.txt  how_start_game.txt  intro_choose_diff.txt  intro_choose_item.txt  intro_choose_name.txt  intro_choose_race.txt  lose_end_game.txt  menu_start_game.txt  more_start_game.txt  oneliners.txt  option1_mid_game.txt  option2_mid_game.txt  option3_mid_game.txt  outro_choose_diff.txt  protect_rare_special.txt  quit_start_game.txt  ready_start_game.txt  ring_choose_item.txt  screen1_mid_game.txt  screen1_start_game.txt  screen2_mid_game.txt  screen2_start_game.txt  screen3_mid_game.txt  screen4_mid_game.txt  (+7 more)
